# ionworksdata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build_docs.yml  publish.yml  unit_tests.yml
docs/: CNAME  conf.py  index.rst
docs/source/api/: index.rst  load.rst  logger.rst  piecewise_linear_timeseries.rst  steps.rst  transform.rst  util.rst
docs/source/api/read/: index.rst
docs/source/api/read/biologic/: index.rst
docs/source/api/read/csv/: index.rst
example/: README.md  full_rpt.json  generate.py  generate_full_rpt.py  plot.py  plot_full_rpt.py  process_and_plot_data.py
example/data/0.2C/: data.csv  metadata.json
example/data/0.5C/: data.csv  metadata.json
example/data/1C/: data.csv  metadata.json
example/data/2C/: data.csv  metadata.json
example/data/full_rpt/: cycling.csv
example/data/gitt/: data.csv  metadata.json
example/data/hppt/: metadata.json
example/data/ocv/: data.csv  metadata.json
ionworksdata/: __init__.py  cycle_metrics.py  load.py  logger.py  piecewise_linear_timeseries.py  settings.py  transform.py  util.py  validation.py
ionworksdata/read/: __init__.py  _utils.py  arbin.py  basytec.py  bdf.py  biologic.py  csv.py  detect.py  gamry.py  maccor.py  neware.py  novonix.py  parquet.py  read.py  repower.py
ionworksdata/steps/: __init__.py  _core.py  _cycling.py  _eis.py  _pulse.py  _validate.py
ionworksdata/write/: __init__.py  bdf.py
scripts/: README.md  convert_to_new_format.py  test_conversion.py
tests/: conftest.py  test_biologic.py  test_cycle_metrics.py  test_data_loader.py  test_detect.py  test_logger.py  test_maccor.py  test_measurement_details.py  test_neware_excel.py  test_novonix.py  test_ocp.py  test_piecewise_linear_timeseries.py  test_read.py  test_repower.py  test_settings.py  test_steps.py  test_transform.py  test_util.py
tests/fixtures/: data.py
tests/test_data/: cccv_synthetic.csv  constant_current_synthetic.csv  full_rpt_synthetic.csv  gitt_synthetic.csv  hppt_synthetic.csv  maccor.txt  maccor.xlsx  maccor_2_row_header.xlsx  maccor_csv.txt  neware.xlsx  novonix.csv  ocv_synthetic.csv  repower.csv
tests/test_data/cccv-synthetic-with-steps/: steps.csv  time_series.csv
(+3 files in other folders)
